--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/netinfo": "^11.3.2",
+    "axios": "^1.7.2",
     "implements": "^0.1.0",
     "react": "18.2.0",
     "react-native": "0.74.1",
